syntax =  "proto3";

package com.improving.app.gateway.domain.tenant;

import "com/improving/app/gateway/domain/tenant/tenantGatewayDomainObjects.proto";
import "com/improving/app/common/domain/ids.proto";
import "scalapb/scalapb.proto";
import "validate/validate.proto";

//Requests
message EstablishTenant {
    com.improving.app.common.domain.TenantId tenant_id = 1;
    com.improving.app.common.domain.MemberId on_behalf_of = 2;
    optional EditableTenantInfo tenant_info = 3;
}

message ActivateTenant {
    com.improving.app.common.domain.TenantId tenant_id = 1;
    com.improving.app.common.domain.MemberId on_behalf_of = 2;
}

message TerminateTenant {
    com.improving.app.common.domain.TenantId tenant_id = 1;
    com.improving.app.common.domain.MemberId on_behalf_of = 2;
}

message TenantRequest{
  option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

  oneof sealed_value {
    EstablishTenant establish_tenant_value = 1;
    ActivateTenant activate_tenant_value = 2;
    TerminateTenant terminate_tenant_value = 3;
  }
}